--- a/lodfix_demo/index.html
+++ b/lodfix_demo/index.html
@@ -19,6 +19,7 @@ var map = window.map = new maplibregl.Map({
     container: 'map',
     zoom: 9,
     center: [0.0, 0.0],
+    pitch: 70,
     renderWorldCopies: false,
     hash: true,
     style: {
