--- a/camera_roll/index.html
+++ b/camera_roll/index.html
@@ -113,7 +113,7 @@ class PitchControl {
         let pitch_down = document.createElement('button');
         pitch_down.innerHTML = "-";
         pitch_down.onclick = (e) => {
-            this._map.easeTo({pitch: Math.round(this._map.getRoll() - 5)});
+            this._map.easeTo({pitch: Math.round(this._map.getPitch() - 5)});
             pitch_value.innerHTML = Math.round(this._map.getPitch());
         };
         let pitch_up = document.createElement('button');
