--- a/camera_roll/index.html
+++ b/camera_roll/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>3D Terrain</title>
-    <meta property="og:description" content="Go beyond hillshade and show elevation in actual 3D." />
+    <title>Roll Demo</title>
+    <meta property="og:description" content="Demonstrate camera roll angle and bad animation caused by linear interpolation of Euler angles." />
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='./maplibre-gl.css' />
