update roll to inlcude mouse control

--- a/camera_roll/index.html
+++ b/camera_roll/index.html
@@ -64,7 +64,8 @@
             sky: {}
         },
         maxZoom: 18,
-        maxPitch: 85
+        maxPitch: 85,
+        rollEnabled: true
     }));
 
     
