--- a/live_tiles/index.html
+++ b/live_tiles/index.html
@@ -5,8 +5,8 @@
     <title>MapLibre Demotile - Live Tiles</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='./coi-serviceworker.js'></script>
-    <script src='https://unpkg.com/maplibre-gl@^5.2.0/dist/maplibre-gl.js'></script>
-    <link href='https://unpkg.com/maplibre-gl@^5.2.0/dist/maplibre-gl.css' rel='stylesheet' />
+    <script src='./maplibre-gl-dev.js'></script>
+    <link href='./maplibre-gl.css' rel='stylesheet' />
     <style>
         body { margin:0; padding:0; }
         #map { position:absolute; top:0; bottom:0; width:100%; }
