add local tile to avoid CORS

--- a/live_tiles/index.html
+++ b/live_tiles/index.html
@@ -27,7 +27,7 @@ var map = window.map = new maplibregl.Map({
         sources: {
             number: {
                 type: 'raster',
-                url: 'https://demotiles.maplibre.org/debug-tiles/number/tiles.json',
+                tiles: ['test.png'],
                 tileSize: 256
             }
         },
