add api key to demo

--- a/lod_control/index.html
+++ b/lod_control/index.html
@@ -27,7 +27,7 @@ var map = window.map = new maplibregl.Map({
         sources: {
             satellite: {
                 type: 'raster',
-                tiles: ['https://basemaps.linz.govt.nz/v1/tiles/aerial/WebMercatorQuad/{z}/{x}/{y}.webp'],
+                tiles: ['https://basemaps.linz.govt.nz/v1/tiles/aerial/WebMercatorQuad/{z}/{x}/{y}.webp?api=c01jp93wy1d0hjwwpeksyf0fntz'],
                 tileSize: 256
             },            
             number: {
