--- a/hillshade/index.html
+++ b/hillshade/index.html
@@ -343,7 +343,7 @@
                 let getColor = (name) => {
                     const v = colorpickers[name].value;
                     const o = opacities[name].value;
-                    return v + (255 * o).toString(16).padStart(2, '0');
+                    return v + Math.round(255 * o).toString(16).padStart(2, '0');
                 }
 
                 let setColors = () => {
